--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>The traveling website</title>
 </head>
 <body>
-    wellcome ji this is hemank sharma
+    wellcome ji this is hemank sharma hi
 </body>
 </html>
