--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>The traveling website</title>
 </head>
 <body>
-    <h1> The Traveling website </h1>
-    wellcome ji this is hemank sharma hi
+    <h1> The Traveling Website </h1>
+    wellcome ji this is hemank Sharma hi
 </body>
 </html>
