--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The traveling website</title>
+    <title>travel website</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 </head>
 <body>
-    <h1> The Traveling Website </h1>
-    wellcome ji this is hemank Sharma hi
+    <header>
+        <a href="" class="logo">travel</a>
+        <div class="bx bx-menu" id="menu-icon"></div>
+
+        <ul class="navbar">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#places">places</a></li>
+            <li><a href="#videos">videos</a></li>
+            <li><a href="#about">about</a></li>
+        </ul>
+    </header>
+    
 </body>
 </html>
