--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/swiper/swiper-bundle.min.css "
+/>
 </head>
 <body>
     <header>
@@ -14,12 +18,16 @@
         <div class="bx bx-menu" id="menu-icon"></div>
 
         <ul class="navbar">
-            <li><a href="#home">Home</a></li>
+            <li><a href="#home" class="home-active">Home</a></li>
             <li><a href="#places">places</a></li>
             <li><a href="#videos">videos</a></li>
             <li><a href="#about">about</a></li>
         </ul>
     </header>
-    
+   <section class="home" id="home"> 
+
+
+   </section>
+   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </body>
 </html>
