--- a/index.html
+++ b/index.html
@@ -24,7 +24,27 @@
             <li><a href="#about">about</a></li>
         </ul>
     </header>
-   <section class="home" id="home"> 
+   <section class="home swiper" id="home"> 
+    <div class="swiper-wrapper">
+
+        <div class="swiper-slide container">
+           <img src="home3.avif" alt="">
+
+        </div>
+
+        <div class="swiper-slide container">
+            <img src="home2.jpg" alt="">
+
+        
+      </div>
+
+      <div class="swiper-slide container">
+        <img src="home3.avif" alt="">
+        </div>
+
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-pagination"></div>
 
 
    </section>
